--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 </head>
 
 <body>
-  <div class="container">
+  <main>
+
     <div class="card">
       <img id="qr_code" src="images/image-qr-code.png" alt="QR Code to Front end mentor ">
 
       <div id="message">
-        <h2>Improve your front-end skills by building projects</h2>
+        <h1>Improve your front-end skills by building projects</h1>
         <br>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
-  </div>
+
+  </main>
 </body>
 
 </html>
